# timing-tower

./: Cargo.toml  egui notes.md  egui_ltreeview.md  performance.txt  readme.md  render_doc_settings.cap  style copy 2.json  style copy.json  style.json  todo.md  value_edit.md
assets/shaders/: custom_material.wgsl
crates/backend/: Cargo.toml
crates/backend/src/: exact_variant.rs  game_sources.rs  graphic.rs  lib.rs  savefile.rs  style.rs  style_batch.rs  style_batcher.rs  timing_tower.rs  tree_iterator.rs  value_store.rs  value_types.rs
crates/backend/src/graphic/: graphic_item_data_storage.rs  style_resolver.rs
crates/backend/src/style/: assets.rs  cell.rs  clip_area.rs  component.rs  elements.rs  folder.rs  graphic.rs  graphic_items.rs  iterator.rs  scene.rs  timing_tower.rs  variables.rs  visitor.rs
crates/backend/src/style/graphic/: graphic_items.rs
crates/backend/src/style/graphic/graphic_items/: cell.rs  clip_area.rs  driver_table.rs  entry_context.rs  root.rs
crates/backend/src/style/graphic_items/: cell.rs  clip_area.rs  driver_table.rs  root.rs
crates/backend/src/style/variables/: condition.rs  fixed_value.rs  map.rs
crates/backend/src/ui/: dashboard.rs
crates/common/: Cargo.toml
crates/common/shaders/: cell.wgsl  cell_frag.wgsl  cell_vert.wgsl
crates/common/src/: asset_path_store.rs  asset_store.rs  cell.rs  cell_material.rs  communication.rs  gradient_material.rs  lib.rs  test.rs  websocket.rs
crates/controller/: Cargo.toml
crates/controller/src/: ball.rs  main.rs  my_websocket.rs  ui.rs  webserver.rs  websocket.rs
crates/controller/web/: .gitignore  index.html
crates/dear_egui/: Cargo.toml
crates/editor/: Cargo.toml
crates/editor/savefile/: style.json  style.style.json
crates/editor/src/: asset_path_store.rs  asset_reference_repo.rs  asset_store.rs  asset_store_impl.rs  camera.rs  cell_manager.rs  command.rs  editor.rs  game_sources.rs  main.rs  property_editor.rs  reference_store.rs  savefile.rs  style.rs  timing_tower.rs  ui.rs  value_store.rs  value_types.rs
crates/editor/src/command/: adapter_command.rs  edit_property.rs  insert_node.rs  mod.rs  move_node.rs  remove_node.rs
crates/editor/src/editor/: camera.rs  command.rs  edit_context.rs  egui_undo_redo.rs  reference_store.rs  tab.rs
crates/editor/src/editor/command/: edit_property.rs  insert_node.rs  move_node.rs  remove_node.rs
crates/editor/src/editor/tab/: property_editor.rs  tree_view.rs  undo_redo.rs
crates/editor/src/editor/tab/property_editor/: cell.rs  property.rs  variable.rs
crates/editor/src/editor/tab/property_editor/variable/: condition.rs  map.rs
crates/editor/src/style/: assets.rs  cell.rs  folder.rs  properties.rs  timing_tower.rs  tree.rs  tree_view_visitor.rs  variables.rs  visitor.rs  visitors.rs
crates/editor/src/style/variables/: condition.rs  fixed_value.rs  map.rs
crates/editor/src/style/visitors/: drop_allowed.rs  insert.rs  property_editor.rs  remove.rs  search.rs  tree_view.rs
crates/editor/src/ui/: combo_box.rs  mod.rs  panels.rs  popup.rs  selection_manager.rs  tab.rs  tabs.rs
crates/editor/src/ui/tab/: dashboard.rs  element_editor.rs  property_editor.rs  tree_view.rs
crates/editor/src/ui/tab/property_editor/: cell.rs  component.rs  graphic.rs  property.rs
crates/editor/src/ui/tab/property_editor/variable/: condition.rs  fixed_value.rs  map.rs
crates/editor/src/ui/tabs/: element_editor.rs  property_editor.rs  secondary_editor.rs  style_item.rs  style_items.rs  undo_redo.rs
crates/editor/src/ui/tabs/property_editor/: graphic.rs
crates/editor/src/ui/tabs/property_editor/variable/: condition.rs  fixed_value.rs  map.rs
crates/editor/src/ui/tabs/style_item/: graphic.rs  property.rs
crates/editor/src/ui/tabs/style_item/variable/: condition.rs  fixed_value.rs  map.rs
crates/frontend/: Cargo.toml
crates/frontend/examples/: ordering.rs
crates/frontend/shaders/: cell_frag.wgsl  instanced_cell_material.wgsl
crates/frontend/src/: cell.rs  cell_manager.rs  lib.rs  (+3 more)
crates/remote/: Cargo.toml  build.rs
crates/remote/src/: main.rs
crates/remote/web/: index.html
crates/render_test/: Cargo.toml
crates/render_test/assets/shaders/: instancing2d.wgsl
crates/render_test/src/: cell_material.rs  main.rs  testing.rs
crates/renderer/: Cargo.toml
crates/renderer/examples/: clip_area.rs  multiple_images.rs  ordering.rs
crates/renderer/src/: asset_path_store.rs  cell_manager.rs  framerate.rs  main.rs  web_asset_store.rs  websocket.rs
crates/timing-tower/: Cargo.toml
crates/tree_view/: Cargo.toml  api_idea_2.rs  egui notes.md
crates/tree_view/examples/: tree_view.rs  v2.rs
crates/tree_view/examples/complete/: data.rs  main.rs  visitor.rs
crates/tree_view/src/: lib.rs  v2.rs
dear_egui/: Cargo.toml
savefile/: style.json  style.style.json
savefiles/ACC/: style.json
savefiles/f1/: style.json
savefiles/gtwc/: style.json
src/: cell.rs  editor.rs  main.rs  property.rs  style_def.rs  timing_tower.rs  variable_repo.rs
src/cell/: background.rs  foreground.rs
src/editor/: properties.rs  scope.rs  style_element_tree.rs  style_elements.rs  test_structs.rs  timing_tower.rs  timing_tower_elements.rs  tree_view.rs  variable_element.rs
timing-tower/: Cargo.toml
timing-tower/src/: asset_reference_repo.rs  asset_repo.rs  cell.rs  editor.rs  game_sources.rs  gradient_material.rs  main.rs  style.rs  timing_tower.rs  variable_repo.rs
timing-tower/src/cell/: background.rs  foreground.rs
timing-tower/src/editor/: style_elements.rs  timing_tower_elements.rs
timing-tower/src/editor/variable_element/: condition.rs  fixed_value.rs
timing-tower/src/style/: assets.rs  cell.rs  folder.rs  properties.rs  timing_tower.rs  variables.rs
timing-tower/src/style/variables/: condition.rs  fixed_value.rs  map.rs
tree_view/: Cargo.toml  api idea
tree_view/examples/: any_test.rs  any_test_2.rs  collapsing_test.rs  enum_tree.rs  interact_test.rs  trait_test.rs  tree_test.rs  tree_view.rs  tree_view_2_test.rs  tree_view_test.rs
tree_view/src/: lib.rs  main.rs  split_collapsing_state.rs  tree_view.rs  tree_view_2.rs
(+17 files in other folders)
