[package]
name = "timing_tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_egui = "0.21"
unified_sim_model = { path = "../unified_sim_model/unified_sim_model" }
dear_egui = {path = "../unified_sim_model/dear_egui"}
serde_json = "1.0.107"
serde = "1.0.188"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
