[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
# Bevy
bevy = "0.12"
# Dependencies that all use the same egui version
egui = "0.23"
bevy_egui = "0.23"
egui_dock = "0.8"

tracing = "0.1.4"
serde = "1.0.188"
postcard = "1.0.8"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
