[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
# Bevy
bevy = "0.12"
# Dependencies that all use the same egui version
egui = "0.26"
bevy_egui = { git = "https://github.com/LennysLounge/bevy_egui_l.git" }
egui_ltreeview = { git = "https://github.com/LennysLounge/egui_ltreeview.git" }
egui_ltable = { path = "../egui_ltable" }
egui_dock = "0.11"

tracing = "0.1.4"
serde = "1.0.188"
postcard = "1.0.8"
uuid = "1.5"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
