[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4"] }
unified_sim_model = { path = "../../../unified_sim_model/unified_sim_model" }
