[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui_ltreeview = { workspace = true }
egui_ltable = {workspace = true}
serde = { workspace = true, features = ["rc"] }
tracing = { workspace = true }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4"] }
unified_sim_model = { path = "../../../unified_sim_model/unified_sim_model" }
dyn-clone = "1.0.16"
enumcapsulate = "0.1"
