[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
bevy_egui = { workspace = true }
egui_dock = { workspace = true }
serde = { workspace = true, features = ["rc"] }
frontend = { path = "../frontend" }
backend = { path = "../backend" }
common = { path = "../common" }
unified_sim_model = { path = "../../../unified_sim_model/unified_sim_model" }
dear_egui = { path = "../dear_egui" }
egui_ltreeview = { git = "https://github.com/LennysLounge/egui_ltreeview.git" }
serde_json = "1.0.107"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
