[package]
name = "remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

bevy = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
rouille = "3.6"
websocket = "0.27"
