[package]
name = "render_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
tracing = { workspace = true }
bytemuck = "1.14"
common = { path = "../common" }
frontend = { path = "../frontend" }
rand = { version = "0.8.5", features = ["std"] }
