[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

bevy = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
ewebsock = "0.4"
wasm-bindgen = "0.2.88"
